targets/srv0/k3s/mosquitto/network-policy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-homeassistant-services-ingress
  namespace: apps
spec:
  podSelector:
    matchLabels:
      app: mosquitto
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/instance: homeassistant
      ports:
        - port: 1883
        - port: 8883
        - port: 9001
  policyTypes:
    - Ingress
